--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "type": "module",
   "workspaces": [
     "plugins/*"
-  ]
+  ],
+  "dependencies": {
+    "eslint-js": "github:eslint/js",
+    "typescript-eslint": "^8.28.0"
+  }
 }
